# greptimedb-ingester-rust

./: Cargo.toml  README.md  docker-compose.test.yml
.github/workflows/: integration-tests.yml
examples/: README.md  bulk_stream_writer_example.rs  config_utils.rs  db-connection.toml  high_level_ingest.rs  high_level_stream_ingest.rs  ingest.rs  insert_example.rs  log_benchmark.rs  low_level_ingest.rs  low_level_stream_ingest.rs  stream_ingest.rs
examples/bench/: benchmark_runner.rs  log_table_data_provider.rs  log_text_helper.rs  mod.rs  table_data_provider.rs
examples/util/: config.rs  mod.rs
scripts/: run_integration_tests.sh
src/: bulk.rs  channel_manager.rs  client.rs  database.rs  error.rs  flight.rs  lib.rs  load_balance.rs  table.rs
src/flight/: do_put.rs
tests/integration/: integration_test.rs
